feat: update Java testing examples with improved parsing logic and refactor data classes